--- a/DemoProject/src/main/resources/com/example/demoproject/main2.fxml
+++ b/DemoProject/src/main/resources/com/example/demoproject/main2.fxml
@@ -73,7 +73,7 @@
                </padding></VBox>
          </content>
       </ScrollPane>
-      <TextField layoutX="739.0" layoutY="41.0" prefHeight="44.0" prefWidth="318.0" promptText="Search" style="-fx-background-color: #FFFFFF;">
+      <TextField fx:id="searchBar" layoutX="739.0" layoutY="41.0" prefHeight="44.0" prefWidth="318.0" promptText="Search" style="-fx-background-color: #FFFFFF;">
          <font>
             <Font size="18.0" />
          </font>
