--- a/Aggregator-GUI/src/main/resources/com/example/aggregator/main3.fxml
+++ b/Aggregator-GUI/src/main/resources/com/example/aggregator/main3.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: #FAEAEC;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demoproject.Scene3Controller">
+<AnchorPane prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: #FAEAEC;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aggregator.Scene3Controller">
    <children>
       <ImageView fitHeight="73.0" fitWidth="1287.0" pickOnBounds="true" preserveRatio="true">
          <image>
