--- a/Aggregator-GUI/src/main/resources/com/example/aggregator/main4.fxml
+++ b/Aggregator-GUI/src/main/resources/com/example/aggregator/main4.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: #FCF1F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demoproject.Scene5Controller">
+<AnchorPane prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: #FCF1F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.aggregator.Scene4Controller">
    <children>
       <ImageView fitHeight="780.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/Scene5Design.png" />
+            <Image url="@images/Scene4Design.png" />
          </image>
       </ImageView>
       <Button fx:id="returnButton" layoutX="107.0" layoutY="9.0" mnemonicParsing="false" onAction="#onClickBack" opacity="0.0" prefHeight="46.0" prefWidth="50.0" style="-fx-cursor: hand;" />
@@ -28,7 +28,7 @@
          </content>
       </ScrollPane>
       <AnchorPane fx:id="coverPane" opacity="0.5" prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" visible="false" />
-      <AnchorPane fx:id="settingsMenu" layoutX="915.0" layoutY="76.0" prefHeight="275.0" prefWidth="346.0" visible="false">
+      <AnchorPane fx:id="settingsMenu" layoutX="915.0" layoutY="75.0" prefHeight="275.0" prefWidth="346.0" visible="false">
          <children>
             <ImageView fitHeight="284.0" fitWidth="348.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -41,6 +41,6 @@
             <Button fx:id="closeSettings" layoutX="14.0" layoutY="229.0" mnemonicParsing="false" onAction="#closeSettings" opacity="0.0" prefHeight="51.0" prefWidth="320.0" style="-fx-cursor: hand;" />
          </children>
       </AnchorPane>
-      <Button fx:id="settings" layoutX="1191.0" layoutY="4.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.0" prefHeight="51.0" prefWidth="60.0" style="-fx-cursor: hand;" />
+      <Button fx:id="settings" layoutX="1191.0" layoutY="3.0" mnemonicParsing="false" onAction="#openSettings" opacity="0.0" prefHeight="51.0" prefWidth="60.0" style="-fx-cursor: hand;" />
    </children>
 </AnchorPane>
